# limbo

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
.github/workflows/: cmake-multi-platform.yml
benchmarks/: CMakeLists.txt
benchmarks/limbo/: bench.cpp  hyperparametertuning.cpp  testfunctions.hpp
cmake/: FindAOCL.cmake  GitVersionDetect.cmake  limbo-config.cmake
custom-triplets/: x64-windows-limbo.cmake
docs/: api.rst
examples/: CMakeLists.txt  mono_dim.cpp  obs_multi.cpp  obs_multi_auto_mean.cpp
examples/experimental/: imgpo.cpp
src/limbo/: concepts.hpp  limbo.hpp  opt.hpp  public.hpp  stat.hpp  stop.hpp  tools.hpp
src/limbo/acqui/: ei.hpp  gp_ucb.hpp  ucb.hpp
src/limbo/bayes_opt/: bo_base.hpp  boptimizer.hpp  boptimizer_impl.hpp
src/limbo/experimental/bayes_opt/: bo_multi.hpp  cboptimizer.hpp  imgpo.hpp  nsbo.hpp  parego.hpp
src/limbo/experimental/stat/: pareto_front.hpp
src/limbo/experimental/tools/: pareto.hpp
src/limbo/init/: grid_sampling.hpp  lhs.hpp  no_init.hpp  random_sampling.hpp  random_sampling_grid.hpp
src/limbo/kernel/: exp.hpp  kernel.hpp  matern_five_halves.hpp  matern_three_halves.hpp  squared_exp_ard.hpp
src/limbo/mean/: constant.hpp  data.hpp  function_ard.hpp  mean.hpp  null_function.hpp
src/limbo/model/: gp.hpp  multi_gp.hpp  sparsified_gp.hpp
src/limbo/model/gp/: hp_opt.hpp  kernel_lf_opt.hpp  kernel_loo_opt.hpp  kernel_mean_lf_opt.hpp  mean_lf_opt.hpp  no_lf_opt.hpp
src/limbo/model/multi_gp/: parallel_lf_opt.hpp
src/limbo/opt/: adam.hpp  chained.hpp  cmaes.hpp  gradient_ascent.hpp  grid_search.hpp  irprop_plus.hpp  nlopt_base.hpp  nlopt_grad.hpp  nlopt_no_grad.hpp  optimizer.hpp  parallel_repeater.hpp  parallel_repeater_2.hpp  random_point.hpp  rprop.hpp
src/limbo/serialize/: binary_archive.hpp  function_export.hpp  text_archive.hpp
src/limbo/stat/: aggregated_observations.hpp  best_aggregated_observations.hpp  best_observations.hpp  best_samples.hpp  console_summary.hpp  gp.hpp  gp_acquisitions.hpp  gp_kernel_hparams.hpp  gp_likelihood.hpp  gp_mean_hparams.hpp  gp_prediction_differences.hpp  model_export.hpp  observations.hpp  runtime_stats_function.hpp  samples.hpp  stat_base.hpp
src/limbo/stop/: max_iterations.hpp  max_merit_value.hpp  max_predicted_value.hpp  runtime_stop_function.hpp
src/limbo/tools/: macros.hpp  parallel.hpp  random.hpp  sys.hpp
tests/: CMakeLists.txt  all_combinations_template.cpp  bo_functions.cpp  test.cpp  test_boptimizer.cpp  test_cmaes.cpp  test_gp.cpp  test_hp_tuning.cpp  test_init_functions.cpp  test_kernel.cpp  test_macros.cpp  test_mean.cpp  test_nlopt.cpp  test_optimizers.cpp  test_serialize.cpp
tutorials/: CMakeLists.txt  advanced_example.cpp  basic_example.cpp  gp.cpp  opt.cpp  statistics.cpp
util/: CMakeLists.txt  CartesianGenerator.cpp  CartesianGenerator.hpp  FunctionExport.hpp  export_model_utility.cpp  export_model_utility_main.cpp  function_export.hpp
